Fix user info is_employee param bug